--- a/startup-modal.html
+++ b/startup-modal.html
@@ -26,8 +26,11 @@
           0 9px 46px rgba(0, 0, 0, 0.12), 0 11px 15px rgba(0, 0, 0, 0.2);
         width: 500px;
         max-width: 90vw;
+        max-height: 90vh;
         padding: 0;
         animation: modalSlideIn 0.3s ease-out;
+        display: flex;
+        flex-direction: column;
       }
 
       @keyframes modalSlideIn {
@@ -47,6 +50,7 @@
         padding: 24px;
         border-radius: 12px 12px 0 0;
         text-align: center;
+        flex-shrink: 0;
       }
 
       .modal-header h2 {
@@ -62,6 +66,9 @@
 
       .modal-body {
         padding: 32px 24px;
+        flex: 1;
+        overflow-y: auto;
+        max-height: 400px;
       }
 
       .mode-selection {
@@ -166,7 +173,9 @@
         font-size: 14px;
         resize: vertical;
         min-height: 80px;
+        max-height: 120px;
         transition: border-color 0.2s ease;
+        overflow-y: auto;
       }
 
       .form-group textarea:focus {
@@ -186,6 +195,7 @@
         display: flex;
         justify-content: flex-end;
         gap: 12px;
+        flex-shrink: 0;
       }
 
       .btn {
@@ -230,6 +240,8 @@
         background: #e8f4fd;
         border-radius: 6px;
         border-left: 4px solid #2196f3;
+        max-height: 120px;
+        overflow-y: auto;
       }
 
       .example-prompts h4 {
@@ -255,6 +267,50 @@
         position: absolute;
         left: 0;
         color: #2196f3;
+      }
+
+      .region-selection {
+        margin-top: 24px;
+        padding: 16px;
+        background: #f8f9fa;
+        border-radius: 8px;
+        border: 1px solid #e0e0e0;
+      }
+
+      .region-selection h4 {
+        font-size: 16px;
+        font-weight: 600;
+        color: #333;
+        margin-bottom: 12px;
+      }
+
+      .region-btn {
+        padding: 10px 16px;
+        border: 1px solid #ccc;
+        border-radius: 6px;
+        background: #fff;
+        cursor: pointer;
+        transition: all 0.2s ease;
+        font-size: 14px;
+        font-weight: 500;
+        color: #333;
+      }
+
+      .region-btn:hover {
+        border-color: #667eea;
+        color: #667eea;
+      }
+
+      .region-btn.selected {
+        border-color: #667eea;
+        background: rgba(102, 126, 234, 0.1);
+        color: #667eea;
+      }
+
+      .region-info {
+        font-size: 12px;
+        color: #666;
+        margin-top: 8px;
       }
     </style>
   </head>
@@ -294,6 +350,31 @@
           </div>
         </div>
 
+        <div class="region-selection">
+          <h4 style="margin-bottom: 12px; color: #333">Screen Capture Area</h4>
+          <div style="display: flex; gap: 12px; margin-bottom: 16px">
+            <button
+              type="button"
+              class="region-btn"
+              id="fullScreenBtn"
+              onclick="selectRegion('fullscreen')"
+            >
+              🖥️ Full Screen
+            </button>
+            <button
+              type="button"
+              class="region-btn"
+              id="targetRegionBtn"
+              onclick="selectRegion('target')"
+            >
+              🎯 Select Target Region
+            </button>
+          </div>
+          <div class="region-info" id="regionInfo">
+            <small>Full screen monitoring selected</small>
+          </div>
+        </div>
+
         <div class="notification-prompt" id="notificationPrompt">
           <div class="form-group">
             <label for="searchPrompt">What should I look for?</label>
@@ -316,6 +397,7 @@
               <li>"A red error message or warning dialog"</li>
               <li>"A meeting notification or calendar alert"</li>
               <li>"A stock price that drops below $50"</li>
+              <li>"The text WHAM on the screen, any case"</li>
             </ul>
           </div>
         </div>
@@ -340,6 +422,7 @@
       const { ipcRenderer } = require("electron");
 
       let selectedMode = null;
+      let selectedRegion = "fullscreen"; // Default to full screen
 
       function selectMode(mode) {
         selectedMode = mode;
@@ -365,6 +448,33 @@
         updateStartButton();
       }
 
+      function selectRegion(region) {
+        selectedRegion = region;
+
+        // Update UI
+        document.querySelectorAll(".region-btn").forEach((btn) => {
+          btn.classList.remove("selected");
+        });
+
+        if (region === "fullscreen") {
+          document.getElementById("fullScreenBtn").classList.add("selected");
+        } else {
+          document.getElementById("targetRegionBtn").classList.add("selected");
+        }
+
+        const regionInfo = document.getElementById("regionInfo");
+        if (region === "fullscreen") {
+          regionInfo.innerHTML =
+            "<small>Full screen monitoring selected</small>";
+        } else {
+          regionInfo.innerHTML =
+            "<small>Target region will be selected after clicking Start Monitoring</small>";
+        }
+
+        // For target region selection, if we have a valid configuration, we can start
+        updateStartButton();
+      }
+
       function updateStartButton() {
         const startBtn = document.getElementById("startBtn");
         const searchPrompt = document
@@ -372,9 +482,11 @@
           .value.trim();
 
         if (selectedMode === "checkin") {
+          // Check-in mode: always ready to start
           startBtn.disabled = false;
         } else if (selectedMode === "notification") {
-          startBtn.disabled = searchPrompt.length < 10;
+          // Notification mode: needs search prompt
+          startBtn.disabled = searchPrompt.length < 5;
         } else {
           startBtn.disabled = true;
         }
@@ -383,14 +495,20 @@
       function startApp() {
         const config = {
           mode: selectedMode,
+          regionType: selectedRegion,
           searchPrompt:
             selectedMode === "notification"
               ? document.getElementById("searchPrompt").value.trim()
               : null,
         };
 
-        // Send config to main process
-        ipcRenderer.send("start-app-with-config", config);
+        if (selectedRegion === "target") {
+          // Send config first, then trigger region selection
+          ipcRenderer.send("start-app-with-region-selection", config);
+        } else {
+          // Send config for full screen mode
+          ipcRenderer.send("start-app-with-config", config);
+        }
 
         // Close modal
         window.close();
@@ -404,6 +522,7 @@
       // Auto-focus and select checkin mode by default
       document.addEventListener("DOMContentLoaded", () => {
         selectMode("checkin");
+        selectRegion("fullscreen"); // Ensure full screen is selected by default
       });
 
       // Handle escape key
