--- a/narrator.html
+++ b/narrator.html
@@ -400,6 +400,80 @@
       .refresh-btn:hover {
         background: #218838;
       }
+
+      /* Frequency Settings Styles */
+      .frequency-settings {
+        background: #f8f9fa;
+        border-radius: 10px;
+        padding: 20px;
+        margin-bottom: 20px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+      }
+
+      .frequency-settings h3 {
+        margin-top: 0;
+        margin-bottom: 15px;
+        color: #333;
+      }
+
+      .frequency-controls {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        margin-bottom: 10px;
+      }
+
+      .frequency-input-group {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+
+      .frequency-input-group label {
+        font-size: 0.9em;
+        color: #555;
+      }
+
+      .frequency-input-group input[type="number"] {
+        width: 80px;
+        padding: 8px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 1em;
+      }
+
+      .frequency-input-group select {
+        padding: 8px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        font-size: 1em;
+      }
+
+      .frequency-info {
+        font-size: 0.8em;
+        color: #666;
+      }
+
+      /* Settings Section Styles */
+      .settings-section {
+        background: #f8f9fa;
+        border-radius: 10px;
+        padding: 20px;
+        margin-bottom: 20px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+      }
+
+      .settings-section h3 {
+        margin-top: 0;
+        margin-bottom: 15px;
+        color: #333;
+      }
+
+      .settings-controls {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
     </style>
   </head>
   <body>
@@ -443,6 +517,57 @@
             <div class="stat-card">
               <div class="stat-value" id="regionStatus">Full Screen</div>
               <div class="stat-label">Region</div>
+            </div>
+            <div class="stat-card">
+              <div class="stat-value" id="frequencyDisplay">5m</div>
+              <div class="stat-label">Frequency</div>
+            </div>
+          </div>
+
+          <div class="frequency-settings">
+            <h3>⏱️ Capture Frequency</h3>
+            <div class="frequency-controls">
+              <div class="frequency-input-group">
+                <label for="frequencyValue">Interval:</label>
+                <input
+                  type="number"
+                  id="frequencyValue"
+                  min="1"
+                  max="10080"
+                  value="5"
+                />
+                <select id="frequencyUnit" onchange="updateMaxValue()">
+                  <option value="seconds">Seconds</option>
+                  <option value="minutes" selected>Minutes</option>
+                  <option value="hours">Hours</option>
+                  <option value="days">Days</option>
+                </select>
+                <button class="btn btn-primary" onclick="updateFrequency()">
+                  Update
+                </button>
+              </div>
+              <div class="frequency-info">
+                <small id="frequencyInfo">Current: Every 5 minutes</small>
+              </div>
+            </div>
+            <div class="frequency-examples">
+              <small style="color: #666">
+                <strong>Examples:</strong>
+                10 seconds (minimum), 5 minutes (default), 2 hours, 1 day
+                (maximum: 7 days)
+              </small>
+            </div>
+          </div>
+
+          <div class="settings-section">
+            <h3>⚙️ Settings</h3>
+            <div class="settings-controls">
+              <button class="btn btn-secondary" onclick="resetSettings()">
+                🔄 Reset to Defaults
+              </button>
+              <small style="color: #666; margin-left: 10px">
+                Resets frequency, mode preferences, and window size to defaults
+              </small>
             </div>
           </div>
 
@@ -566,6 +691,11 @@
           ? `Session: ${data.sessionId.substring(0, 8)}...`
           : "No active session";
 
+        // Update frequency display
+        if (data.frequency) {
+          updateFrequencyDisplay(data.frequency);
+        }
+
         // Update captures list
         const capturesList = document.getElementById("capturesList");
         if (data.conversationHistory && data.conversationHistory.length > 0) {
@@ -600,6 +730,149 @@
               <p>Start a session to see captures here</p>
             </div>
           `;
+        }
+      }
+
+      // Update frequency display
+      function updateFrequencyDisplay(frequency) {
+        const frequencyDisplay = document.getElementById("frequencyDisplay");
+        const frequencyInfo = document.getElementById("frequencyInfo");
+
+        let displayText, infoText;
+
+        if (frequency.intervalSeconds < 60) {
+          displayText = `${frequency.intervalSeconds}s`;
+          infoText = `Current: Every ${frequency.intervalSeconds} second${
+            frequency.intervalSeconds !== 1 ? "s" : ""
+          }`;
+        } else if (frequency.intervalMinutes < 60) {
+          const minutes = Math.round(frequency.intervalMinutes);
+          displayText = `${minutes}m`;
+          infoText = `Current: Every ${minutes} minute${
+            minutes !== 1 ? "s" : ""
+          }`;
+        } else if (frequency.intervalHours < 24) {
+          const hours = Math.round(frequency.intervalHours);
+          displayText = `${hours}h`;
+          infoText = `Current: Every ${hours} hour${hours !== 1 ? "s" : ""}`;
+        } else {
+          const days = Math.round(frequency.intervalDays);
+          displayText = `${days}d`;
+          infoText = `Current: Every ${days} day${days !== 1 ? "s" : ""}`;
+        }
+
+        frequencyDisplay.textContent = displayText;
+        frequencyInfo.textContent = infoText;
+
+        // Update form values using the saved settings
+        const valueInput = document.getElementById("frequencyValue");
+        const unitSelect = document.getElementById("frequencyUnit");
+
+        if (frequency.value && frequency.unit) {
+          valueInput.value = frequency.value;
+          unitSelect.value = frequency.unit;
+        } else {
+          // Fallback to calculated values
+          if (
+            frequency.intervalDays >= 1 &&
+            frequency.intervalDays === Math.floor(frequency.intervalDays)
+          ) {
+            valueInput.value = frequency.intervalDays;
+            unitSelect.value = "days";
+          } else if (
+            frequency.intervalHours >= 1 &&
+            frequency.intervalHours === Math.floor(frequency.intervalHours)
+          ) {
+            valueInput.value = frequency.intervalHours;
+            unitSelect.value = "hours";
+          } else {
+            valueInput.value = Math.round(frequency.intervalMinutes);
+            unitSelect.value = "minutes";
+          }
+        }
+
+        // Update max value for current unit
+        updateMaxValue();
+      }
+
+      // Update capture frequency
+      async function updateFrequency() {
+        const value = parseInt(document.getElementById("frequencyValue").value);
+        const unit = document.getElementById("frequencyUnit").value;
+
+        if (!value || value < 1) {
+          alert("Please enter a valid interval value");
+          return;
+        }
+
+        // Validate based on unit
+        let maxValue;
+        switch (unit) {
+          case "seconds":
+            maxValue = 600; // 10 minutes in seconds
+            break;
+          case "minutes":
+            maxValue = 10080; // 7 days in minutes
+            break;
+          case "hours":
+            maxValue = 168; // 7 days in hours
+            break;
+          case "days":
+            maxValue = 7; // 7 days
+            break;
+        }
+
+        if (value > maxValue) {
+          alert(`Maximum value for ${unit} is ${maxValue}`);
+          return;
+        }
+
+        try {
+          const result = await ipcRenderer.invoke(
+            "set-capture-frequency",
+            value,
+            unit
+          );
+
+          if (result.success) {
+            updateFrequencyDisplay(result.frequency);
+
+            // Show success message
+            const frequencyInfo = document.getElementById("frequencyInfo");
+            const originalText = frequencyInfo.textContent;
+            frequencyInfo.textContent = "✅ Frequency updated successfully!";
+            frequencyInfo.style.color = "green";
+
+            setTimeout(() => {
+              frequencyInfo.textContent = originalText;
+              frequencyInfo.style.color = "";
+            }, 2000);
+          } else {
+            alert(`Failed to update frequency: ${result.error}`);
+          }
+        } catch (error) {
+          alert(`Error updating frequency: ${error.message}`);
+        }
+      }
+
+      // Update max value when unit changes
+      function updateMaxValue() {
+        const unit = document.getElementById("frequencyUnit").value;
+        const valueInput = document.getElementById("frequencyValue");
+
+        switch (unit) {
+          case "seconds":
+            valueInput.max = 600; // 10 minutes in seconds
+            break;
+          case "minutes":
+            valueInput.max = 10080; // 7 days in minutes
+            break;
+          case "hours":
+            valueInput.max = 168; // 7 days in hours
+            break;
+          case "days":
+            valueInput.max = 7; // 7 days
+            break;
         }
       }
 
@@ -763,6 +1036,30 @@
         }
       });
 
+      // Listen for flash indicator trigger
+      ipcRenderer.on("trigger-flash-indicator", () => {
+        // Visual feedback in dashboard when detection occurs
+        const statusText = document.getElementById("statusText");
+        const originalText = statusText.textContent;
+
+        statusText.textContent = "🚨 DETECTION TRIGGERED!";
+        statusText.style.color = "red";
+        statusText.style.fontWeight = "bold";
+
+        // Reset after 3 seconds
+        setTimeout(() => {
+          statusText.textContent = originalText;
+          statusText.style.color = "";
+          statusText.style.fontWeight = "";
+        }, 3000);
+      });
+
+      // Listen for flash trigger to main process
+      ipcRenderer.on("trigger-flash-to-main", () => {
+        // Forward to main process
+        ipcRenderer.send("trigger-flash-indicator");
+      });
+
       // Listen for region updates
       ipcRenderer.on("region-updated", (event, region) => {
         const regionStatus = document.getElementById("regionStatus");
@@ -789,8 +1086,35 @@
 
       // Initialize
       window.addEventListener("load", () => {
+        updateMaxValue(); // Initialize max value for frequency input
         loadDashboard();
       });
+
+      // Reset settings to defaults
+      async function resetSettings() {
+        const confirmed = confirm(
+          "Are you sure you want to reset all settings to defaults? This will reset frequency, mode preferences, and window size."
+        );
+
+        if (!confirmed) return;
+
+        try {
+          const result = await ipcRenderer.invoke("reset-settings");
+
+          if (result.success) {
+            alert(
+              "Settings reset successfully! Please restart the application for all changes to take effect."
+            );
+
+            // Reload dashboard to show updated settings
+            loadDashboard();
+          } else {
+            alert(`Failed to reset settings: ${result.error}`);
+          }
+        } catch (error) {
+          alert(`Error resetting settings: ${error.message}`);
+        }
+      }
     </script>
   </body>
 </html>
