--- a/narrator.html
+++ b/narrator.html
@@ -185,6 +185,27 @@
         font-weight: bold;
       }
 
+      /* New Session Section Styles */
+      .new-session-section {
+        text-align: center;
+        margin-bottom: 20px;
+        padding: 20px;
+        background: #e3f2fd; /* Light blue background */
+        border-radius: 10px;
+        border: 1px solid #bbdefb;
+      }
+
+      .btn-large {
+        padding: 12px 24px;
+        font-size: 1.1em;
+      }
+
+      .new-session-desc {
+        margin-top: 10px;
+        color: #333;
+        font-size: 0.9em;
+      }
+
       /* File Manager Styles */
       .file-manager {
         display: flex;
@@ -243,7 +264,7 @@
       .session-info {
         flex: 1;
         display: grid;
-        grid-template-columns: 1fr 120px 120px 100px 80px;
+        grid-template-columns: 1fr 100px 100px 80px 160px;
         gap: 15px;
         align-items: center;
       }
@@ -593,6 +614,27 @@
       .webhook-health-message {
         font-weight: bold;
       }
+
+      /* New Session Section Styles */
+      .new-session-section {
+        text-align: center;
+        margin-bottom: 20px;
+        padding: 20px;
+        background: #e3f2fd; /* Light blue background */
+        border-radius: 10px;
+        border: 1px solid #bbdefb;
+      }
+
+      .btn-large {
+        padding: 12px 24px;
+        font-size: 1.1em;
+      }
+
+      .new-session-desc {
+        margin-top: 10px;
+        color: #333;
+        font-size: 0.9em;
+      }
     </style>
   </head>
   <body>
@@ -641,6 +683,18 @@
               <div class="stat-value" id="frequencyDisplay">5m</div>
               <div class="stat-label">Frequency</div>
             </div>
+          </div>
+
+          <div class="new-session-section">
+            <button
+              class="btn btn-primary btn-large"
+              onclick="startNewSession()"
+            >
+              🚀 Configure New Session
+            </button>
+            <p class="new-session-desc">
+              Set up a new monitoring session with custom settings
+            </p>
           </div>
 
           <div class="frequency-settings">
@@ -1282,7 +1336,7 @@
       // Reset settings to defaults
       async function resetSettings() {
         const confirmed = confirm(
-          "Are you sure you want to reset all settings to defaults? This will reset frequency, mode preferences, and window size."
+          "Are you sure you want to reset all settings to defaults? This will reset frequency, mode preferences, and window size to defaults."
         );
 
         if (!confirmed) return;
@@ -1600,6 +1654,33 @@
           }
         });
       });
+
+      // Start new session
+      async function startNewSession() {
+        const confirmed = confirm(
+          "Start a new monitoring session?\n\n" +
+            "This will:\n" +
+            "• Open the session configuration dialog\n" +
+            "• Allow you to choose a new mode and settings\n" +
+            "• Current session will continue until you start the new one\n\n" +
+            "Continue?"
+        );
+
+        if (!confirmed) return;
+
+        try {
+          const result = await ipcRenderer.invoke("start-new-session");
+
+          if (result.success) {
+            // No need for alert since the startup modal will open
+            console.log("Opening new session configuration...");
+          } else {
+            alert(`Failed to open session configuration: ${result.error}`);
+          }
+        } catch (error) {
+          alert(`Error opening session configuration: ${error.message}`);
+        }
+      }
     </script>
   </body>
 </html>
